# chopper-calculations

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
cmake/: fetcher.cmake
src/: chopcal.cpp  choppers.cpp  choppers.h  mcstas_chopper_lib.cpp
src/chopcal/: __init__.py
src/chopcal/lib/: __init__.py
test/: test_bifrost.py  test_choplib.py
