[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"
            "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "chopcal"
description = "Provides the results of chopper calculations from McStas instruments"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Gregory Tucker", email = "gregory.tucker@ess.eu" },
]
classifiers = [
    "License :: BSD",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/g5t/chopper-calculations"

[tool.setuptools_scm]