[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.7.0",
            "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "chopcal"
version = "0.0.1"
description = "Provides the results of chopper calculations from McStas instruments"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Gregory Tucker", email = "gregory.tucker@ess.eu" },
]
classifiers = [
    "License :: BSD",
]
#dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/g5t/chopper-calculations"

[tool.setuptools_scm]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"