[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.7.0",
            "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "chopcal"
description = "Provides the results of chopper calculations from McStas instruments"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gregory Tucker", email = "gregory.tucker@ess.eu" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/g5t/chopper-calculations"


[tool.setuptools_scm]


[tool.scikit-build]
# Use setuptoos-scm to discover the version number
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Include compilation build output
build-verbosity = 1

# Run pytest as part of the build
test-command = "pytest {project}/test"
test-requires = ["pytest", "scipp", "scipy", "numpy"]
# skip testint on PyPy, musllinux and 32-bit for now to avoid trying to build scipy & scipp
test-skip = ["pp*", "*-musllinux*", "*-win32", "*-manylinux_i686"]

# Need for full C++17 support on MacOS
[tool.cibuildwheel.macos.environment]
MACOS_DEPLOYMENT_TARGET = "10.14"
